--- a/web/scss/_main.scss
+++ b/web/scss/_main.scss
@@ -936,6 +936,8 @@
 
 	@include breakpoint(tablet) {
 		width: 100%;
+		float: none;
+		clear: both;
 	}
 }
 
